# dynamover

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: prs.yml  release-please.yml
src/: aws_config.rs  dynamodb_operations.rs  github_releases.rs  main.rs  persistence.rs
