[package]
name = "flare-rust"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[dependencies]
aws-config = "1.5.8"
aws-sdk-dynamodb = "1.49.0"
aws-types = "1.3.3"
aws-runtime = "1.4.3"
colored = "2.0.0"
inquire = "0.3"
semver = "1.0"
tokio = { version = "1", features = ["full"] }
