[package]
name = "dynamover"
version = "0.2.0"
edition = "2021"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[dependencies]
aws-config = "1.5.8"
aws-sdk-dynamodb = "1.49.0"
aws-types = "1.3.3"
aws-runtime = "1.4.3"
chrono = "0.4"
config = "0.14"
colored = "2.0.0"
inquire = "0.3"
reqwest = { version = "0.11", features = ["json"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
regex = "1.11.0"
dirs = "5.0.1"
tokio-test = "0.4.4"
mockito = "1.5.0"
futures = "0.3.31"
